force-app/main/default/objects/TimeEntry__c/fields/BusinessHours__c.field-meta.xml
<CustomField>
    <fullName>BusinessHours__c</fullName>
    <description>Number of business hours of a worked day</description>
    <label>BUSINESS HOURS</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>