force-app/main/default/objects/TimeEntry__c/fields/BusinessHoursEndTime__c.field-meta.xml
<CustomField>
    <fullName>BusinessHoursEndTime__c</fullName>
    <label>BUSINESS HOUR END TIME</label>
    <length>10</length>
    <type>Text</type>
</CustomField>