force-app/main/default/objects/TimeEntry__c/fields/BusinessHoursStartTime__c.field-meta.xml
<CustomField>
    <fullName>BusinessHoursStartTime__c</fullName>
    <label>BUSINESS HOUR START TIME</label>
    <length>10</length>
    <type>Text</type>
</CustomField>