force-app/main/default/objects/TimeEntry__c/fields/ComeOrLeave__c.field-meta.xml
<CustomField>
    <fullName>ComeOrLeave__c</fullName>
    <label>COME OR LEAVE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>comes</fullName>
            </value>
            <value>
                <fullName>leaves</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>