force-app/main/default/objects/TimeEntry__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>USER ACCOUNT NAME</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TimeEntry</relationshipName>
    <type>Lookup</type>
</CustomField>