force-app/main/default/objects/TimeEntry__c/fields/EnterTime__c.field-meta.xml
<CustomField>
    <fullName>EnterTime__c</fullName>
    <label>ENTER TIME</label>
    <type>DateTime</type>
</CustomField>