force-app/main/default/objects/TimeEntry__c/fields/LeaveTime__c.field-meta.xml
<CustomField>
    <fullName>LeaveTime__c</fullName>
    <label>LEAVE TIME</label>
    <type>DateTime</type>
</CustomField>