force-app/main/default/objects/TimeEntry__c/fields/LogDate__c.field-meta.xml
<CustomField>
    <fullName>LogDate__c</fullName>
    <formula>DATEVALUE( EnterTime__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LOG DATE</label>
    <type>Date</type>
</CustomField>