force-app/main/default/objects/TimeEntry__c/fields/LoggedHours__c.field-meta.xml
<CustomField>
    <fullName>LoggedHours__c</fullName>
    <label>LOGGED HOUR</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>