force-app/main/default/objects/TimeEntry__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>NOTES</label>
    <length>255</length>
    <type>Text</type>
</CustomField>