force-app/main/default/objects/TimeEntry__c/fields/NotifyManager__c.field-meta.xml
<CustomField>
    <fullName>NotifyManager__c</fullName>
    <defaultValue>true</defaultValue>
    <label>NOTIFY MANAGER</label>
    <type>Checkbox</type>
</CustomField>