force-app/main/default/objects/TimeEntry__c/fields/OnLeave__c.field-meta.xml
<CustomField>
    <fullName>OnLeave__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ON LEAVE</label>
    <type>Checkbox</type>
</CustomField>