force-app/main/default/objects/TimeEntry__c/fields/OT__c.field-meta.xml
<CustomField>
    <fullName>OT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OVERTIME WORKING</label>
    <type>Checkbox</type>
</CustomField>