force-app/main/default/objects/TimeEntry__c/fields/PublicHoliday__c.field-meta.xml
<CustomField>
    <fullName>PublicHoliday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PUBLIC HOLIDAY</label>
    <type>Checkbox</type>
</CustomField>