force-app/main/default/objects/TimeEntry__c/fields/UserAccountID__c.field-meta.xml
<CustomField>
    <fullName>UserAccountID__c</fullName>
    <formula>Employee__c</formula>
    <label>USER ACCOUNT ID</label>
    <type>Text</type>
</CustomField>